#
# $Id: Makefile.am,v 1.1.1.1 2007/01/25 12:52:54 jiahao_jhou Exp $
#
# Copyright (C) 1995 Lars Fenneberg
#
# See the file COPYRIGHT for the respective terms and conditions. 
# If the file is missing contact me at lf@elemental.net 
# and I'll send you a copy.
#

AUTOMAKE_OPTIONS = foreign

CLEANFILES = *~
